--- a/api/pom.xml
+++ b/api/pom.xml
@@ -80,6 +80,11 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.20.26</version>
+        </dependency>
     </dependencies>
 
     <build>
