--- a/api/pom.xml
+++ b/api/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>s3</artifactId>
             <version>2.20.26</version>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
