feat: add logging, category and product service tests

--- a/api/src/main/resources/application-test.yml
+++ b/api/src/main/resources/application-test.yml
@@ -7,7 +7,7 @@ spring:
   jpa:
     hibernate.ddl-auto: create-drop
     generate-ddl: true
-    show-sql: true
+    show-sql: false
     defer-datasource-initialization: true
   sql:
     init:
