fix: application profiles

--- a/api/src/main/resources/application-test.yml
+++ b/api/src/main/resources/application-test.yml
@@ -12,3 +12,12 @@ spring:
   sql:
     init:
       mode: always
+
+aws:
+  accessKey: ${ACCESS_KEY}
+  secretKey: ${SECRET_KEY}
+  region: ${REGION}
+  s3:
+    mock: true
+    buckets:
+      customer: ${CUSTOMER_S3}
